# InvestPro

./: .gitignore  README.md  project_details.md
apps/api/: pyproject.toml
apps/api/app/: __init__.py  main.py  models.py
apps/api/app/core/: auth.py
apps/api/app/data/: __init__.py  demo.py  live.py
apps/api/app/portfolio/: __init__.py  csv_io.py  tracking.py
apps/api/app/quant/: __init__.py  backtest.py  explain.py  factors.py  metrics.py
apps/api/tests/: test_api.py  test_auth.py  test_csv_io.py  test_explain.py  test_factors.py  test_metrics.py  test_portfolio_tracking.py
apps/web/: eslint.config.mjs  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/guide/: page.tsx
apps/web/src/components/: auth-buttons.tsx  csv-importer.tsx  info-button.tsx  portfolio-tracker.tsx  results-dashboard.tsx  stock-explanation.tsx  strategy-builder.tsx
apps/web/src/lib/: api.ts  glossary.ts  presets.ts
docs/superpowers/plans/: 2026-04-23-investpro-live-presets.md  2026-04-23-investpro-quant-v2.md  2026-04-23-investpro-v1-vertical-slice.md  2026-04-23-investpro-v3-decision-layer.md  2026-04-23-investpro-v4-portfolio-workflow.md  2026-04-23-investpro-v5-real-financial-tool.md
docs/superpowers/specs/: 2026-04-23-investpro-factor-research-lab-design.md  2026-04-23-investpro-live-presets-design.md  2026-04-23-investpro-quant-v2-design.md  2026-04-23-investpro-v3-decision-layer-design.md  2026-04-23-investpro-v4-portfolio-workflow-design.md
