[project]
name = "investpro-api"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pandas>=2.2.0",
  "numpy>=1.26.0,<2.0.0",
  "pydantic>=2.8.0",
  "requests>=2.32.0",
  "yfinance>=0.2.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
